syntax = "proto3";

package payment;

option go_package = "./proto;paymentgrpc";

service Payment {
  rpc Withdraw(WithdrawRequest) returns (WithdrawResponse);
  rpc Deposit(DepositRequest) returns (DepositResponse);
}

message WithdrawRequest {
	int64 userID = 1;
	float amount = 2;
}

message WithdrawResponse {
	int64 id = 1;
}


message DepositRequest {
	int64 userID = 1;
	float amount = 2;
}

message DepositResponse {
	int64 id = 1;
}

