syntax = "proto3";

package transaction;

option go_package = "./proto;transactiongrpc";

//service UserEvents {}

message TransactionCreatedEvent {
    int64 transactionID = 1;
    int64 userID = 2;
    double amount = 3;
    double balance = 4;
    string kind = 5;
    int64 createdAt = 6;
}
